--- a/Atividade 2/package.json
+++ b/Atividade 2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atividade",
+  "name": "my-app-state",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -12,7 +12,8 @@
     "expo": "~54.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "@expo/vector-icons": "^15.0.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
