--- a/Carrinho de compra/package.json
+++ b/Carrinho de compra/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^15.0.2",
     "expo": "^54.0.10",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-dom": "19.1.0",
     "react-native": "0.79.6",
     "react-native-web": "^0.21.0"
