--- a/telas_de_navegação/package.json
+++ b/telas_de_navegação/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "expo": "~54.0.14",
@@ -16,7 +17,9 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "source-map": "^0.7.6",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
