--- a/4_Bimestre/app-proprietario/package.json
+++ b/4_Bimestre/app-proprietario/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "att_drawer",
+  "name": "app-proprietario",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -10,21 +10,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@gorhom/bottom-sheet": "^5.2.6",
-    "@react-navigation/drawer": "^7.7.2",
-    "@react-navigation/native": "^7.1.19",
-    "expo": "~54.0.23",
+    "@react-navigation/bottom-tabs": "^7.8.5",
+    "@react-navigation/drawer": "^7.7.3",
+    "@react-navigation/native": "^7.1.20",
+    "axios": "^1.13.2",
+    "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.15.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
   },
   "private": true
